RESOLVED FIXED147708
PDFPlugins are clipped in link previews (and remain so when opened)
https://bugs.webkit.org/show_bug.cgi?id=147708
Summary PDFPlugins are clipped in link previews (and remain so when opened)
Tim Horton
Reported 2015-08-05 17:07:32 PDT
PDFPlugins are clipped in link previews (and remain so when opened)
Attachments
Patch (16.95 KB, patch)
2015-08-05 17:08 PDT, Tim Horton
no flags
Patch (17.07 KB, patch)
2015-08-05 17:09 PDT, Tim Horton
simon.fraser: review+
Tim Horton
Comment 1 2015-08-05 17:08:45 PDT
Tim Horton
Comment 2 2015-08-05 17:09:29 PDT
Tim Horton
Comment 3 2015-08-05 17:10:05 PDT
I fully recognize how horrifying this patch is and apologize in advance :(
WebKit Commit Bot
Comment 4 2015-08-05 17:11:09 PDT
Attachment 258325 [details] did not pass style-queue: ERROR: Source/WebKit2/UIProcess/API/mac/WKView.mm:4346: The parameter name "!" adds no information, so it should be removed. [readability/parameter_name] [5] ERROR: Source/WebKit2/UIProcess/API/mac/WKView.mm:4375: The parameter name "!" adds no information, so it should be removed. [readability/parameter_name] [5] Total errors found: 2 in 11 files If any of these errors are false positives, please file a bug against check-webkit-style.
Simon Fraser (smfr)
Comment 5 2015-08-05 17:23:15 PDT
Comment on attachment 258325 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=258325&action=review > Source/WebKit2/UIProcess/WebFrameProxy.h:138 > + bool m_containsPluginDocument; I don't see this getting initialized. > Source/WebKit2/WebProcess/WebPage/WebPage.cpp:1424 > + m_page->setPageScaleFactor(1, origin); > + for (auto* pluginView : m_pluginViews) > + pluginView->pageScaleFactorDidChange(); Won't Page::setPageScaleFactor() do the pageScaleFactorDidChange() on every widget?
Tim Horton
Comment 6 2015-08-05 18:05:17 PDT
(In reply to comment #5) > Comment on attachment 258325 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=258325&action=review > > > Source/WebKit2/UIProcess/WebFrameProxy.h:138 > > + bool m_containsPluginDocument; > > I don't see this getting initialized. Good catch. > > Source/WebKit2/WebProcess/WebPage/WebPage.cpp:1424 > > + m_page->setPageScaleFactor(1, origin); > > + for (auto* pluginView : m_pluginViews) > > + pluginView->pageScaleFactorDidChange(); > > Won't Page::setPageScaleFactor() do the pageScaleFactorDidChange() on every > widget? No. Widget doesn't even have such a thing.
Tim Horton
Comment 7 2015-08-05 18:07:19 PDT
Note You need to log in before you can comment on or make changes to this bug.